tests/valid/04_if_else.mini0
// Estructuras if-else

fun main()
    x: int
    x = 10
    if x > 5
        x = 1
    else if x < 3
        x = 2
    else
        x = 0
    end
end