tests/invalid/09_expresion_incompleta.mini0
// Expresion incompleta

fun main()
    x: int
    x = 2 +
end